# ml-for-bioe

./: .gitignore  .jenkinsfile  404.html  Gemfile  README.md  index.html  makefile  pyproject.toml
.support-files/: columnfilter  elsmd-slides.latex  notes.yml  overlay_filter  slides.typ  speakernotes.lua  style.html
final-project/: index.html
homework/: WBC.csv  WBC.csv.REMOVED.git-id  Week1-Introduction.ipynb  Week2-Statistics.ipynb  Week3-Fitting.ipynb  Week4-PLSR.ipynb  Week6-DynamicalModels.ipynb  Week7-HMMs.ipynb  Week9-SVM.ipynb  wk4_Cosgrove-data.mat
lectures/: .gitignore  Wk1-Lecture1.md  Wk1-Lecture1.qmd  Wk1-Lecture2.md  Wk1-Lecture2.qmd  Wk2-Lecture3.md  Wk2-Lecture3.qmd  Wk2-Lecture4.md  Wk3-Lecture5.md  Wk3-Lecture6.md  Wk4-Lecture7.md  Wk4-Lecture8.md  Wk5-Lecture09.md  Wk5-Lecture10.md  Wk6-Lecture11.md  Wk7-Lecture13.md  Wk7-Lecture14.md  Wk8-Lecture15.md  Wk8-Lecture16.md  _quarto-self.yml  _quarto.yml  autodifferentiation.qmd  bayesian.md  bayesian.qmd  clustering.md  clustering.qmd  dimensionality-reduction.md  dimensionality-reduction.qmd  dynamics.md  dynamics.qmd  gmms.md  gmms.qmd  hmm.md  hmm.qmd  lecture1.qmd  model-validation.md  model-validation.qmd  neural-networks.qmd  notes.scss  overparameterization.qmd  (+11 more)
outline/: index.html
review-qs/: index.html
site/: hugo.toml
site/content/examples/: CrossVal-Example.qmd  Gaussian-Mixtures.qmd  HMMs-example.qmd  K-Means.ipynb  K-Means.qmd  OLS-Example.qmd  PCA-NNMF.ipynb  PCA-NNMF.qmd  Regularization-Example.qmd  SVMs-example.ipynb  SVMs-example.qmd  pyproject.toml
website/: Gemfile  (+9 more)
(+131 files in other folders)
