[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "seaborn>=0.13.2",
]
